# firelynx

./: .gitattributes  .gitignore  .golangci.yml  Makefile  README.md  buf.gen.yaml  go.mod  go.sum
.github/workflows/: cache-dependencies.yml  go-coverage.yml  go.yml  golangci-lint.yml
cmd/firelynx/: README.md  client.go  logger.go  logger_test.go  main.go  server.go  server_test.go  validate.go  validate_test.go  version.go
docs/: ARCHITECTURE.md  CLI.md  ERROR_HANDLING.md  HOT_RELOAD.md  IMPLEMENTATION_PATTERNS.md  SPECIFICATION.md  SUMMARY.md
examples/: advanced_config.toml  exampleData.go  example_test.go  minimal_config.toml  prompt_example.risor  risor_tool.risor  sample_config.toml  starlark_tool.star
examples/config/: advanced_config.toml  advanced_config.toml.tmpl  config_test.go  fileread.toml  headers.toml  http_test_config.toml  logging-full.toml  logging-minimal.toml  logging-presets.toml  logging.toml  middleware.toml  minimal_config.toml  script-extism-basic.toml  script-risor-basic.toml  script-risor-basic_test.go  script-starlark-basic.toml  script-starlark-basic_test.go  script-with-data.toml  script-with-data_test.go
examples/wasm/rust/char_counter/: .gitignore  Cargo.toml  Makefile  README.md  out  schema.yaml  xtp.toml
examples/wasm/rust/char_counter/src/: lib.rs  pdk.rs
examples/wasm/rust/char_counter/test/: Cargo.toml  xtp.toml
examples/wasm/rust/char_counter/test/src/: lib.rs
internal/client/: client applyconfig_test.go  client.go  client_integration_test.go  client_test.go  errors.go
internal/config/: README.md  config.go  (+33 more)
(+717 files in other folders)
